2008-03-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Resources/COPYING: Update to 2008.

	* src/Clients/Nereid/Nereid/PlayerInterface.cs:
	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistSource.cs:
	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs:
	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmActions.cs:
	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs:
	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/StationSource.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs: Fix warnings.

2008-03-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryArtistInfo.cs:
	Replace confusing constructors with static FindOrCreate methods.  Should
	fix an issue with finding/creating/associating new albums too.

	* src/Core/Banshee.Services/Banshee.Library/LibraryImportManager.cs: Use
	new FindOrCreate methods.

2008-03-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data/ISelectable.cs: Forgot to commit new file.

2008-03-04  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit fixes a long standing bug in trunk - selections now persist
	across source reloads (assuming the tracks are still in the source/not
	filtered).

	* src/Core/Banshee.Services/Banshee.Playlist/AbstractPlaylistSource.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	Add a bool CachesJoinTableEntries property so Smart Playlists can use the
	join table but fill the CoreCache with TrackIDS not EntryIDS - needed,
	since their EntryIDs don't last long b/c they are wiped/created anew every
	time its Reloaded.

	* src/Core/Banshee.Services/Banshee.Collection/BansheeListModel.cs: Don't
	clear the selection on reload.

	* src/Core/Banshee.Services/Banshee.SmartPlaylist/SmartPlaylistSource.cs:
	Override CachesJoinTableEntries to false.
